--- a/emmabeauty/Secciones/Pestañas.html
+++ b/emmabeauty/Secciones/Pestañas.html
@@ -21,27 +21,27 @@
     <title>Pestañas</title>
 </head>
 
-<body class="color-fondo" >
+<body class="color-fondo">
     <button class="floating-button" onclick="openModal()"><img src="../img/icons8-carro-favorito-24.png" alt="Carrito"
-        width="30" height="30"></button>
-<div id="modal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <h2>Servicios seleccionados</h2>
-        <div class="card-container" id="card-service-container"></div>
-        <div class="modal-buttons">
-            <button onclick="finalizarPedido()" type="button" class="btn btn-primary btn-sm boton-fin">Finalizar
-                Pedido</button>
-            <button onclick="vaciarCarrito()" type="button" class="btn btn-primary btn-sm">Vaciar Carrito</button>
-            <div class="icons">
-                <span class="d-flex">🕘: <div id="time-estimated"></div>
-                </span>
-                <span class="d-flex">💵: <div id="price-total"></div>
-                </span>
+            width="30" height="30"></button>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Servicios seleccionados</h2>
+            <div class="card-container" id="card-service-container"></div>
+            <div class="modal-buttons">
+                <button onclick="finalizarPedido()" type="button" class="btn btn-primary btn-sm boton-fin">Finalizar
+                    Pedido</button>
+                <button onclick="vaciarCarrito()" type="button" class="btn btn-primary btn-sm">Vaciar Carrito</button>
+                <div class="icons">
+                    <span class="d-flex">🕘: <div id="time-estimated"></div>
+                    </span>
+                    <span class="d-flex">💵: <div id="price-total"></div>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
-</div>
     <nav class=" navbar-inicio navbar bg-body-tertiary">
         <div class="container-fluid">
             <img class="logo" src="../img/icons8-cuidado-del-spa-64.png" alt="">
@@ -62,20 +62,24 @@
             <img class="card-img-top" src="../img/lifting-tarj.jpg" alt="imagen uñas Semipermanente">
             <div class="card-body">
                 <h5 class="card-title">Lifting</h5>
-                <p class="card-text">Es un tratamiento que eleva la curvatura de tus pestañas, resaltando la expresión de la mirada y alargando las pestañas desde la raíz, sin utilizar pelo sintético..</p>
+                <p class="card-text">Es un tratamiento que eleva la curvatura de tus pestañas, resaltando la expresión
+                    de la mirada y alargando las pestañas desde la raíz, sin utilizar pelo sintético..</p>
                 <h5 class="info-hora">🕘Hora aprox: 3HS</h5>
                 <h5 class="info-precio">💵Precio: $2500</h5>
-                <a href="#" onclick="agregarServicio(5, ServiciosPestañas)" class="btn btn-primary">Agregar al carrito</a>
+                <a href="#" onclick="agregarServicio(5, ServiciosPestañas)" class="btn btn-primary">Agregar al
+                    carrito</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="../img/extensiones-tarj.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Extensiones de pestañas</h5>
-                <p class="card-text"> A cada pelo de tu pestaña se añade uno nuevo de material sintético o seda pegado con un pegamento especial y con una técnica llevada a cabo por una profesional.</p>
+                <p class="card-text"> A cada pelo de tu pestaña se añade uno nuevo de material sintético o seda pegado
+                    con un pegamento especial y con una técnica llevada a cabo por una profesional.</p>
                 <h5 class="info-hora">🕘Hora aprox: 4HS</h5>
-                <h5  class="info-precio">💵Precio: $3000</h5>
-                <a href="#" onclick="agregarServicio(6, ServiciosPestañas)" class="btn btn-primary">Agregar al carrito</a>
+                <h5 class="info-precio">💵Precio: $3000</h5>
+                <a href="#" onclick="agregarServicio(6, ServiciosPestañas)" class="btn btn-primary">Agregar al
+                    carrito</a>
             </div>
         </div>
     </div>
