--- a/emmabeauty/Secciones/Manicuria.html
+++ b/emmabeauty/Secciones/Manicuria.html
@@ -27,7 +27,7 @@
         width="30" height="30"></button>
 <div id="modal" class="modal">
     <div class="modal-content">
-        <span class="close" onclick="closeModal()">&times;</span>
+        <span class="close close-button" onclick="closeModal()">&times;</span>
         <h2>Servicios seleccionados</h2>
         <div class="card-container" id="card-service-container"></div>
         <div class="modal-buttons">
