--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -58,6 +58,20 @@
             <button onclick="servicios()" type="button" class="btn btn-dark">Click para ver servicios</button>
             </a>
         </div>
+        <div class="d-flex justify-content-center">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner" id="userCarousel">
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon carousel-control" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon carousel-control" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
         <div class="tarjeta-index">
             <div class="d-flex justify-content-center tarjeta1">
                 <div class="card card-cont w-75 mb-3">
